Kubernetes/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  namespace: app-note
  labels:
    app: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: us-central1-docker.pkg.dev/maiv-store-online/repo/backapp-notes:1.0.0
        ports:
        - containerPort: 5000
---

apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: app-note
spec:
  type: ClusterIP
  selector:
    app: backend
  ports:
  - port: 5000
    targetPort: 5000
