Kubernetes/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  namespace: app-note
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: us-central1-docker.pkg.dev/maiv-store-online/repo/frontapp-notes:1.0.0
        ports:
        - containerPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: app-note
  annotations:
    # Habilita Container-Native Load Balancing con NEG en el puerto 80
    cloud.google.com/neg: '{"ingress": true}'
spec:
  type: ClusterIP
  selector:
    app: frontend
  ports:
  - port: 80
    targetPort: 80
